--- a/variables.env
+++ b/variables.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://JuanAlberto-Mx:xjjqeyR0Xxxjl9D2@cluster0.47aahi5.mongodb.net/dbProducts
+DB_MONGO=mongodb+srv://<user:key>@cluster0.47aahi5.mongodb.net/dbProducts
